<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".home.HomeFragment">

    <include layout="@layout/default_background" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android:text="@string/login"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icLogin"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:background="@drawable/ic_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleLogin"
        app:layout_goneMarginTop="15dp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/usernameLogin"
        android:layout_width="368dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_soft_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icLogin" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icUsername"
        android:layout_width="35dp"
        android:layout_height="28dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/ic_user"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@id/usernameLogin"
        app:layout_constraintStart_toStartOf="@id/usernameLogin"
        app:layout_constraintTop_toTopOf="@id/usernameLogin" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:hint="@string/username"
        android:textColor="@color/white"
        android:textColorHint="@color/med_purple"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@id/usernameLogin"
        app:layout_constraintEnd_toEndOf="@id/usernameLogin"
        app:layout_constraintStart_toEndOf="@id/icUsername"
        app:layout_constraintTop_toTopOf="@id/usernameLogin" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/password"
        android:layout_width="368dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_soft_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUsername" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icPassword"
        android:layout_width="35dp"
        android:layout_height="28dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/ic_lock"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintTop_toTopOf="@id/password" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:textColorHint="@color/med_purple"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@id/password"
        app:layout_constraintEnd_toStartOf="@id/icEye"
        app:layout_constraintStart_toEndOf="@id/icPassword"
        app:layout_constraintTop_toTopOf="@id/password" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icEye"
        android:layout_width="27dp"
        android:layout_height="18.56dp"
        android:layout_marginEnd="13dp"
        android:background="@drawable/ic_eye"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@id/password"
        app:layout_constraintEnd_toEndOf="@id/password"
        app:layout_constraintTop_toTopOf="@id/password" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnLogin"
        android:layout_width="368dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_deep_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRegisterReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="@id/btnLogin"
        app:layout_constraintTop_toTopOf="@id/btnLogin" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_deep_purple"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="@id/btnLogin"
        app:layout_constraintTop_toBottomOf="@id/tvRegisterReg" />


</androidx.constraintlayout.widget.ConstraintLayout>