<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WelcomeFragment">

    <include
        layout="@layout/default_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitleWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android:text="@string/welcome"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icWelcome"
        android:layout_width="363dp"
        android:layout_height="375dp"
        android:background="@drawable/ic_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleWelcome" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnRegisterWelc"
        android:layout_width="368dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_deep_purple"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icWelcome"
        android:contentDescription="Register Button"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="@id/btnRegisterWelc"
        app:layout_constraintEnd_toEndOf="@id/btnRegisterWelc"
        app:layout_constraintStart_toStartOf="@id/btnRegisterWelc"
        app:layout_constraintTop_toTopOf="@id/btnRegisterWelc" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnLogin"
        android:layout_width="368dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_soft_purple"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRegister"
        android:contentDescription="Login Button"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/med_purple"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="@id/btnLogin"
        app:layout_constraintTop_toTopOf="@id/btnLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>