<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WelcomeFragment">

    <include layout="@layout/default_background" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitleWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android:text="@string/register"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icRegister"
        android:layout_width="341dp"
        android:layout_height="225dp"
        android:background="@drawable/ic_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleWelcome"
        app:layout_goneMarginTop="15dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/email"
        android:layout_width="368dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_soft_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icRegister" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icMail"
        android:layout_width="35dp"
        android:layout_height="28dp"
        android:background="@drawable/ic_mail"
        app:layout_constraintStart_toStartOf="@id/email"
        android:layout_marginStart="30dp"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="@id/email"
        app:layout_constraintTop_toTopOf="@id/email" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColor="@color/white"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="@id/email"
        app:layout_constraintTop_toTopOf="@id/email"
        app:layout_constraintStart_toEndOf="@id/icMail"
        android:layout_marginStart="35dp"
        app:layout_constraintEnd_toEndOf="@id/email"
        android:textColorHint="@color/med_purple"
        android:inputType="textEmailAddress"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/username"
        android:layout_width="368dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_soft_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etMail" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icUsername"
        android:layout_width="35dp"
        android:layout_height="28dp"
        android:background="@drawable/ic_user"
        app:layout_constraintStart_toStartOf="@id/username"
        android:layout_marginStart="30dp"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="@id/username"
        app:layout_constraintTop_toTopOf="@id/username" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textColor="@color/white"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="@id/username"
        app:layout_constraintTop_toTopOf="@id/username"
        app:layout_constraintStart_toEndOf="@id/icUsername"
        android:layout_marginStart="35dp"
        app:layout_constraintEnd_toEndOf="@id/username"
        android:textColorHint="@color/med_purple"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/password"
        android:layout_width="368dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_soft_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUsername" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icPassword"
        android:layout_width="35dp"
        android:layout_height="28dp"
        android:background="@drawable/ic_lock"
        app:layout_constraintStart_toStartOf="@id/password"
        android:layout_marginStart="30dp"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="@id/password"
        app:layout_constraintTop_toTopOf="@id/password" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="@id/password"
        app:layout_constraintTop_toTopOf="@id/password"
        app:layout_constraintStart_toEndOf="@id/icPassword"
        android:layout_marginStart="35dp"
        app:layout_constraintEnd_toStartOf="@id/icEye"
        android:textColorHint="@color/med_purple"
        android:inputType="textPassword"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icEye"
        android:layout_width="27dp"
        android:layout_height="18.56dp"
        android:background="@drawable/ic_eye"
        app:layout_constraintEnd_toEndOf="@id/password"
        android:layout_marginEnd="13dp"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="@id/password"
        app:layout_constraintTop_toTopOf="@id/password"
        android:clickable="true"
        android:contentDescription="Password Toggle"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnRegisterReg"
        android:layout_width="368dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_deep_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:clickable="true"
        android:contentDescription="Register Button"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRegisterReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="@id/btnRegisterReg"
        app:layout_constraintEnd_toEndOf="@id/btnRegisterReg"
        app:layout_constraintStart_toStartOf="@id/btnRegisterReg"
        app:layout_constraintTop_toTopOf="@id/btnRegisterReg" />


</androidx.constraintlayout.widget.ConstraintLayout>